--- a/specification/azureintegrationspaces/resource-manager/Microsoft.IntegrationSpaces/preview/2023-11-14-preview/examples/Applications_Get.json
+++ b/specification/azureintegrationspaces/resource-manager/Microsoft.IntegrationSpaces/preview/2023-11-14-preview/examples/Applications_Get.json
@@ -20,7 +20,15 @@
         },
         "properties": {
           "provisioningState": "Succeeded",
-          "description": "This is the user provided description of the application resource."
+          "description": "This is the user provided description of the application.",
+          "trackingDataStores": {
+            "dataStoreName1": {
+              "dataStoreResourceId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/testrg/providers/Microsoft.Kusto/Clusters/cluster1",
+              "databaseName": "testDatabase1",
+              "dataStoreIngestionUri": "https://ingest-someClusterName.someRegionName.kusto.windows.net",
+              "dataStoreUri": "https://someClusterName.someRegionName.kusto.windows.net"
+            }
+          }
         }
       }
     }
