--- a/specification/azureintegrationspaces/resource-manager/Microsoft.IntegrationSpaces/preview/2023-11-14-preview/examples/Applications_Patch.json
+++ b/specification/azureintegrationspaces/resource-manager/Microsoft.IntegrationSpaces/preview/2023-11-14-preview/examples/Applications_Patch.json
@@ -1,6 +1,6 @@
 {
-  "operationId": "Applications_Update",
-  "title": "UpdateApplication",
+  "operationId": "Applications_Patch",
+  "title": "PatchApplication",
   "parameters": {
     "subscriptionId": "00000000-0000-0000-0000-000000000000",
     "resourceGroupName": "testrg",
@@ -12,7 +12,7 @@
         "key1": "Value1"
       },
       "properties": {
-        "description": "This is the user provided description of the application resource."
+        "description": "This is the user provided PATCHED description of the application."
       }
     }
   },
@@ -28,7 +28,15 @@
         },
         "properties": {
           "provisioningState": "Succeeded",
-          "description": "This is the user provided description of the application resource."
+          "description": "This is the user provided PATCHED description of the application.",
+          "trackingDataStores": {
+            "dataStoreName1": {
+              "dataStoreResourceId": "/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/testrg/providers/Microsoft.Kusto/Clusters/cluster1",
+              "databaseName": "testDatabase1",
+              "dataStoreIngestionUri": "https://ingest-someClusterName.someRegionName.kusto.windows.net",
+              "dataStoreUri": "https://someClusterName.someRegionName.kusto.windows.net"
+            }
+          }
         }
       }
     }
