Updates API version in new specs and examples

--- a/specification/purview/resource-manager/Microsoft.Purview/preview/2023-05-01-preview/examples/KafkaConfigurations_CreateOrUpdate.json
+++ b/specification/purview/resource-manager/Microsoft.Purview/preview/2023-05-01-preview/examples/KafkaConfigurations_CreateOrUpdate.json
@@ -18,7 +18,7 @@
         "eventHubResourceId": "/subscriptions/225be6fe-ec1c-4d51-a368-f69348d2e6c5/resourceGroups/testRG/providers/Microsoft.EventHub/namespaces/eventHubNameSpaceName"
       }
     },
-    "api-version": "2021-12-01"
+    "api-version": "2023-05-01-preview"
   },
   "responses": {
     "200": {
