--- a/specification/purview/resource-manager/Microsoft.Purview/preview/2023-05-01-preview/examples/KafkaConfigurations_Delete.json
+++ b/specification/purview/resource-manager/Microsoft.Purview/preview/2023-05-01-preview/examples/KafkaConfigurations_Delete.json
@@ -4,7 +4,7 @@
     "resourceGroupName": "rgpurview",
     "accountName": "account1",
     "kafkaConfigurationName": "kafkaConfigName",
-    "api-version": "2021-12-01"
+    "api-version": "2023-05-01-preview"
   },
   "responses": {
     "200": {},
