--- a/specification/purview/resource-manager/Microsoft.Purview/preview/2023-05-01-preview/examples/KafkaConfigurations_ListByAccount.json
+++ b/specification/purview/resource-manager/Microsoft.Purview/preview/2023-05-01-preview/examples/KafkaConfigurations_ListByAccount.json
@@ -3,7 +3,7 @@
     "subscriptionId": "34adfa4f-cedf-4dc0-ba29-b6d1a69ab345",
     "resourceGroupName": "rgpurview",
     "accountName": "account1",
-    "api-version": "2021-12-01",
+    "api-version": "2023-05-01-preview",
     "$skipToken": "token"
   },
   "responses": {
