--- a/specification/resources/CIS.Management/dscm/tspconfig.yaml
+++ b/specification/resources/CIS.Management/dscm/tspconfig.yaml
@@ -4,6 +4,6 @@ options:
   '@azure-tools/typespec-autorest':
     azure-resource-provider-folder: "resource-manager"
     emitter-output-dir: "{project-root}/../.."
-    examples-directory: "{project-root}/../examples"
+    examples-directory: "{project-root}/examples"
     arm-types-dir: "{project-root}/../../../common-types/resource-management"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/dscm.json"
