Rename example file for Operations

--- a/specification/resources/CIS.Management/Dscm/examples/DstsApplication_Operations.json
+++ b/specification/resources/CIS.Management/Dscm/examples/DstsApplication_Operations.json
@@ -1,5 +1,5 @@
 {
-  "title": "List Operations",
+  "title": "List Operations DstsApplication",
   "operationId": "Operations_List",
   "parameters": {
     "api-version": "2023-08-22-preview"
