--- a/specification/solarwinds/SolarWinds.Management/tspconfig.yaml
+++ b/specification/solarwinds/SolarWinds.Management/tspconfig.yaml
@@ -6,3 +6,12 @@ options:
     emitter-output-dir: "{project-root}/.."
     examples-directory: "examples"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/openapi.json"
+    
+  swagger-to-sdk:
+  - repo: azure-sdk-for-python-track2
+  - repo: azure-sdk-for-java
+  - repo: azure-sdk-for-go
+  - repo: azure-sdk-for-js
+  - repo: azure-resource-manager-schemas
+  - repo: azure-cli-extensions
+  - repo: azure-powershell
