Changes based on comments

--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/stable/2023-09-01/configurationGroupValues.json
@@ -449,7 +449,7 @@
         "Open"
       ],
       "x-ms-enum": {
-        "name": "configurationType",
+        "name": "ConfigurationGroupValueConfigurationType",
         "modelAsString": true
       }
     }
