--- a/specification/netapp/resource-manager/Microsoft.NetApp/preview/2023-05-01-preview/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/preview/2023-05-01-preview/netapp.json
@@ -8611,6 +8611,11 @@
             "key"
           ]
         },
+        "deploymentSpecId": {
+          "type": "string",
+          "description": "Application specific identifier of deployment rules for the volume group",
+          "example": "20542149-bfca-5618-1879-9863dc6767f1"
+        },
         "volumesCount": {
           "type": "integer",
           "format": "int64",
