--- a/specification/netapp/resource-manager/Microsoft.NetApp/preview/2023-05-01-preview/netapp.json
+++ b/specification/netapp/resource-manager/Microsoft.NetApp/preview/2023-05-01-preview/netapp.json
@@ -8613,7 +8613,7 @@
         },
         "deploymentSpecId": {
           "type": "string",
-          "description": "Application specific identifier of deployment rules for the volume group",
+          "description": "Application specific identifier of deployment rules for the volume group, this is not needed anymore please use applicationType instead",
           "example": "20542149-bfca-5618-1879-9863dc6767f1"
         },
         "volumesCount": {
