--- a/specification/devcenter/DevCenter/tspconfig.yaml
+++ b/specification/devcenter/DevCenter/tspconfig.yaml
@@ -1,14 +1,15 @@
-emit:
-  - "@azure-tools/typespec-autorest"
-  # Uncomment this line and add "@azure-tools/typespec-python" to your package.json to generate Python code
-  # "@azure-tools/typespec-python":
-  #   "basic-setup-py": true
-  #   "package-version":
-  #   "package-name":
-  #   "output-path":
-  # Uncomment this line and add "@azure-tools/typespec-java" to your package.json to generate Java code
-  # "@azure-tools/typespec-java": true
-  # Uncomment this line and add "@azure-tools/typespec-csharp" to your package.json to generate C# code
-  - "@azure-tools/typespec-csharp"
-  # Uncomment this line and add "@azure-tools/typespec-ts" to your package.json to generate Typescript code
-  # "@azure-tools/typespec-ts": true
+emit: [
+  # "@azure-tools/typespec-apiview",
+  # "@azure-tools/typespec-autorest",
+  # "@azure-tools/typespec-csharp"
+  "@azure-tools/typespec-ts",
+]
+# linter:
+#   extends:
+#     - "@azure-tools/typespec-azure-core/all"
+options:
+  "@azure-tools/typespec-csharp":
+    namespace : "Azure.Developer.DevCenter"
+    clear-output-folder : true
+    # new-project : false
+    # model-namespace : false
