add ts to tspconfig.yaml

--- a/specification/devcenter/DevCenter/tspconfig.yaml
+++ b/specification/devcenter/DevCenter/tspconfig.yaml
@@ -13,3 +13,12 @@ options:
     clear-output-folder : true
     # new-project : false
     # model-namespace : false
+  "@azure-tools/typespec-ts":
+    title: "{title}"
+    generateMetadata: true
+    generateTest: true
+    "emitter-output-dir": "{output-dir}"
+    packageDetails:
+      name: "@azure-rest/developer-devcenter"
+      description: "Azure Developer DevCenter Client"
+      version: "1.0.0-beta.1"
