--- a/specification/web/resource-manager/Microsoft.Web/stable/2023-01-01/examples/CreateOrUpdateWebApp.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2023-01-01/examples/CreateOrUpdateWebApp.json
@@ -120,7 +120,12 @@
           "httpsOnly": false,
           "redundancyMode": "None",
           "storageAccountRequired": false,
-          "keyVaultReferenceIdentity": "SystemAssigned"
+          "keyVaultReferenceIdentity": "SystemAssigned",
+          "workloadProfileName": "myd4wp",
+          "resourceConfig": {
+              "cpu": 1.0,
+              "memory": "2.0Gi"
+          }
         }
       }
     },
@@ -233,7 +238,12 @@
           "httpsOnly": false,
           "redundancyMode": "None",
           "storageAccountRequired": false,
-          "keyVaultReferenceIdentity": "SystemAssigned"
+          "keyVaultReferenceIdentity": "SystemAssigned",
+          "workloadProfileName": "myd4wp",
+          "resourceConfig": {
+              "cpu": 1.0,
+              "memory": "2.0Gi"
+          }
         }
       }
     }
