--- a/specification/web/resource-manager/Microsoft.Web/stable/2023-01-01/examples/ListWebApps.json
+++ b/specification/web/resource-manager/Microsoft.Web/stable/2023-01-01/examples/ListWebApps.json
@@ -113,7 +113,12 @@
               "httpsOnly": false,
               "redundancyMode": "None",
               "storageAccountRequired": false,
-              "keyVaultReferenceIdentity": "SystemAssigned"
+              "keyVaultReferenceIdentity": "SystemAssigned",
+              "workloadProfileName": "myd4wp",
+              "resourceConfig": {
+                  "cpu": 1.0,
+                  "memory": "2.0Gi"
+              }
             }
           },
           {
@@ -221,7 +226,12 @@
               "httpsOnly": false,
               "redundancyMode": "None",
               "storageAccountRequired": false,
-              "keyVaultReferenceIdentity": "SystemAssigned"
+              "keyVaultReferenceIdentity": "SystemAssigned",
+              "workloadProfileName": "myd4wp",
+              "resourceConfig": {
+                  "cpu": 1.0,
+                  "memory": "2.0Gi"
+              }
             }
           }
         ]
