--- a/specification/botservice/resource-manager/Microsoft.BotService/preview/2023-09-15-preview/examples/GetHostSettings.json
+++ b/specification/botservice/resource-manager/Microsoft.BotService/preview/2023-09-15-preview/examples/GetHostSettings.json
@@ -1,7 +1,7 @@
 {
   "parameters": {
     "subscriptionId": "subscription-id",
-    "api-version": "2022-09-15"
+    "api-version": "2023-09-15-preview"
   },
   "responses": {
     "200": {
