lint and prettier fix

--- a/specification/frontdoor/resource-manager/Microsoft.Network/stable/2023-11-01/webapplicationfirewall.json
+++ b/specification/frontdoor/resource-manager/Microsoft.Network/stable/2023-11-01/webapplicationfirewall.json
@@ -524,6 +524,7 @@
         },
         "logScrubbing": {
           "description": "Defines rules to scrub sensitive fields in Web Application Firewall logs",
+          "type":"object",
           "properties": {
             "state": {
               "type": "string",
@@ -550,6 +551,7 @@
     },
     "WebApplicationFirewallScrubbingRules": {
       "description": "Defines contents of a log scrub rules.",
+      "type":"object",
       "required": [
         "matchVariable",
         "selectorMatchOperator"
