--- a/specification/loadtestservice/LoadTestService/tspconfig.yaml
+++ b/specification/loadtestservice/LoadTestService/tspconfig.yaml
@@ -13,6 +13,9 @@ emit:
   # "@azure-tools/typespec-csharp": true
   # Uncomment this line and add "@azure-tools/typespec-ts" to your package.json to generate Typescript code
   # "@azure-tools/typespec-ts": true
+linter:
+  extends:
+    - "@azure-tools/typespec-azure-core/all"
 options:
   "@azure-tools/typespec-autorest":
     emitter-output-dir: "{project-root}/../"
