--- a/specification/frontdoor/resource-manager/Microsoft.Network/stable/2023-11-01/webapplicationfirewall.json
+++ b/specification/frontdoor/resource-manager/Microsoft.Network/stable/2023-11-01/webapplicationfirewall.json
@@ -530,8 +530,8 @@
               "type": "string",
               "description": "State of the log scrub config. Default value is Enabled.",
               "enum": [
-                "Disabled",
-                "Enabled"
+                "Enabled",
+                "Disabled"
               ],
               "x-ms-enum": {
                 "name": "WebApplicationFirewallScrubbingState",
@@ -1019,8 +1019,8 @@
         "selectorMatchOperator": {
           "type": "string",
           "enum": [
-            "Equals",
-            "EqualsAny"
+            "EqualsAny",
+            "Equals"
           ],
           "description": "Comparison type to use for matching with the variable value in log.",
           "x-ms-enum": {
