Revert changes due to validation errors

--- a/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-08-01-preview/appconfiguration.json
+++ b/specification/appconfiguration/resource-manager/Microsoft.AppConfiguration/preview/2023-08-01-preview/appconfiguration.json
@@ -2740,6 +2740,12 @@
             "modelAsString": true
           }
         },
+        "created": {
+          "description": "The time that the snapshot was created.",
+          "format": "date-time",
+          "type": "string",
+          "readOnly": true
+        },
         "expires": {
           "description": "The time that the snapshot will expire.",
           "format": "date-time",
