--- a/specification/communitytraining/Community.Management/tspconfig.yaml
+++ b/specification/communitytraining/Community.Management/tspconfig.yaml
@@ -4,7 +4,7 @@ emit:
 options:
   "@azure-tools/typespec-autorest":
     emitter-output-dir: "{output-dir}"
-    azure-resource-provider-folder: ../resource-manager
+    azure-resource-provider-folder: ./resource-manager
     examples-directory: ./examples
     new-line: lf
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/CommunityTrainings.json"
