fix swagger modal validation

--- a/specification/botservice/resource-manager/Microsoft.BotService/preview/2023-09-15-preview/examples/GetNetworkSecurityPerimeterConfiguration.json
+++ b/specification/botservice/resource-manager/Microsoft.BotService/preview/2023-09-15-preview/examples/GetNetworkSecurityPerimeterConfiguration.json
@@ -3,7 +3,7 @@
     "subscriptionId": "subId",
     "resourceGroupName": "rgName",
     "resourceName": "botId",
-    "associationName": "00000000-0000-0000-0000-000000000000.associationName",
+    "networkSecurityPerimeterConfigurationName": "00000000-0000-0000-0000-000000000000.associationName",
     "api-version": "2023-09-15-preview"
   },
   "responses": {
