--- a/specification/communitytraining/Community.Management/tspconfig.yaml
+++ b/specification/communitytraining/Community.Management/tspconfig.yaml
@@ -1,13 +1,11 @@
-output-dir: "{project-root}/../"
 emit:
-  - "@azure-tools/typespec-autorest"
+  - '@azure-tools/typespec-autorest'
 options:
-  "@azure-tools/typespec-autorest":
-    emitter-output-dir: "{output-dir}"
-    azure-resource-provider-folder: ./resource-manager
-    examples-directory: ./examples
-    new-line: lf
+  '@azure-tools/typespec-autorest':
+    emitter-output-dir: "{project-root}/.."
+    azure-resource-provider-folder: "resource-manager"
     output-file: "{azure-resource-provider-folder}/{service-name}/{version-status}/{version}/CommunityTrainings.json"
-  "@azure-tools/typespec-providerhub-controller":
-    emitter-output-dir: "{output-dir}/generated"
-    code-kind: model
+    examples-directory: "{project-root}/examples"
+linter:
+  extends:
+    - "@azure-tools/typespec-azure-resource-manager/all"
