--- a/specification/devcenter/DevCenter/tspconfig.yaml
+++ b/specification/devcenter/DevCenter/tspconfig.yaml
@@ -14,7 +14,7 @@ options:
     # new-project : false
     # model-namespace : false
   "@azure-tools/typespec-ts":
-    title: "add your title here"
+    title: "Azure Developer DevCenter"
     generateMetadata: true
     generateTest: true
     "emitter-output-dir": "{output-dir}"
