Use plural form for interface

--- a/specification/resources/Azcis.TypeSpec/Dscm/examples/DstsApplications_Get.json
+++ b/specification/resources/Azcis.TypeSpec/Dscm/examples/DstsApplications_Get.json
@@ -1,6 +1,6 @@
 {
   "title": "Get DstsApplication",
-  "operationId": "DstsApplication_Get",
+  "operationId": "DstsApplications_Get",
   "parameters": {
     "subscriptionId": "mySubscriptionId",
     "resourceGroupName": "myResourceGroup",
