--- a/specification/resources/resource-manager/Microsoft.AzureCIS/preview/2023-08-22-preview/examples/DstsApplications_Get.json
+++ b/specification/resources/resource-manager/Microsoft.AzureCIS/preview/2023-08-22-preview/examples/DstsApplications_Get.json
@@ -1,6 +1,6 @@
 {
   "title": "Get DstsApplication",
-  "operationId": "DstsApplication_Get",
+  "operationId": "DstsApplications_Get",
   "parameters": {
     "subscriptionId": "mySubscriptionId",
     "resourceGroupName": "myResourceGroup",
