--- a/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/preview/2023-04-01-preview/examples/NetworkFunctionDefinitionVersionListApplicationVersions.json
+++ b/specification/hybridnetwork/resource-manager/Microsoft.HybridNetwork/preview/2023-04-01-preview/examples/NetworkFunctionDefinitionVersionListApplicationVersions.json
@@ -39,7 +39,8 @@
               "mediaType": "testMediaType"
             }
           }
-        ]
+        ],
+        "nextLink": "{refererHeaderUrl}?$skipToken={opaqueString}"
       }
     },
     "202": {
