[EngSys] Default all workflow perms to "content: read" (#32388)
- Should have no real-world security impact
- Follows principle of least-priviliges

--- a/.github/workflows/tsp-client-test.yaml
+++ b/.github/workflows/tsp-client-test.yaml
@@ -21,6 +21,9 @@ on:
       - specification/sphere
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   tsp-client:
     uses: ./.github/workflows/_reusable-eng-tools-test.yaml
