--- a/specification/deviceregistry/DeviceRegistry.Management/tspconfig.yaml
+++ b/specification/deviceregistry/DeviceRegistry.Management/tspconfig.yaml
@@ -24,7 +24,7 @@ options:
     package-dir: "azure-resourcemanager-deviceregistry"
     flavor: "azure"
     service-name: "Device Registry"
-    api-version: "2024-09-01-preview"
+    api-version: "2024-11-01"
   "@azure-tools/typespec-ts":
     azureSdkForJs: true
     isModularLibrary: true
