--- a/specification/network/resource-manager/sdk-suppressions.yaml
+++ b/specification/network/resource-manager/sdk-suppressions.yaml
@@ -7,6 +7,9 @@ suppressions:
         - Field `Etag` of struct `BaseAdminRule` has been removed
         - Field `Etag` of struct `DefaultAdminRule` has been removed
         - Field `Etag` of struct `SecurityAdminConfiguration` has been removed
+        - Function `*ConnectionMonitorsClient.BeginQuery` has been removed
+        - Function `*ConnectionMonitorsClient.BeginStart` has been removed
+        - Type of `LoadBalancerHealthPerRulePerBackendAddress.NetworkInterfaceIPConfigurationID` has been changed from `*InterfaceIPConfiguration` to `*string`
   azure-sdk-for-js:
     - package: '@azure/arm-network'
       breaking-changes:
