--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -44,6 +44,7 @@ jobs:
           # TODO: Temporary to improve perf while iterating
           sparse-checkout: |
             .github
+            eng
 
       - name: ARM Auto Signoff (Preview)
         uses: actions/github-script@v7
