[labels] Add support for "add" and "remove" as synonyms for "true" and "false"

--- a/.github/actions/add-label-artifact/action.yaml
+++ b/.github/actions/add-label-artifact/action.yaml
@@ -6,7 +6,7 @@ inputs:
     description: Name
     required: true
   value:
-    description: Value ("true" or "false")
+    description: Value ("true" or "add" to add the label, "false" or "remove" to remove the label)
     required: true
 
 runs:
