--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -46,15 +46,23 @@ jobs:
             .github
             eng
 
-      - name: ARM Auto Signoff (Preview)
+      - id: get-label-action
+        name: ARM Auto Signoff (Preview)
         uses: actions/github-script@v7
-        env:
-          OWNER: ${{ inputs.owner }}
-          REPO: ${{ inputs.repo }}
-          ISSUE_NUMBER: ${{ inputs.issue_number }}
-          HEAD_SHA: ${{ inputs.head_sha }}
         with:
           script: |
             const { default: getLabelAction } =
               await import('${{ github.workspace }}/.github/workflows/src/arm-auto-signoff-preview.js');
             return await getLabelAction({ github, context, core });
+        env:
+          OWNER: ${{ inputs.owner }}
+          REPO: ${{ inputs.repo }}
+          ISSUE_NUMBER: ${{ inputs.issue_number }}
+          HEAD_SHA: ${{ inputs.head_sha }}
+
+      - if: ${{ steps.get-label-action.outputs.result == 'add' || steps.get-label-action.outputs.result == 'remove' }}
+        name: Upload artifact with results
+        uses: ./.github/actions/add-label-artifact
+        with:
+          name: "ARMAutoSignoffPreview"
+          value: ${{ steps.get-label-action.outputs.result }}
