--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -65,4 +65,4 @@ jobs:
         uses: ./.github/actions/add-label-artifact
         with:
           name: "ARMAutoSignoffPreview"
-          value: ${{ steps.get-label-action.outputs.result }}
+          value: "${{ steps.get-label-action.outputs.result == 'add' }}"
