--- a/.github/workflows/arm-auto-signoff-preview.yaml
+++ b/.github/workflows/arm-auto-signoff-preview.yaml
@@ -53,10 +53,12 @@ jobs:
             .github
             eng
 
+      # Output is "none" for no-op, "add" to add label, and "remove" to remove label
       - id: get-label-action
         name: ARM Auto Signoff (Preview)
         uses: actions/github-script@v7
         with:
+          result-encoding: string
           script: |
             const { default: getLabelAction } =
               await import('${{ github.workspace }}/.github/workflows/src/arm-auto-signoff-preview.js');
