added a few OpId and Title to examples

--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/ActiveSessionHostConfigurations_Get.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/ActiveSessionHostConfigurations_Get.json
@@ -84,5 +84,8 @@
         }
       }
     }
-  }
+  },
+
+  "operationId": "ActiveSessionHostConfigurations_Get",
+  "title": "ActiveSessionHostConfigurations_Get"
 }
