--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/ActiveSessionHostConfigurations_ListByHostPool.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/ActiveSessionHostConfigurations_ListByHostPool.json
@@ -88,5 +88,7 @@
         ]
       }
     }
-  }
+  },
+  "operationId": "ActiveSessionHostConfigurations_ListByHostPool",
+  "title": "ActiveSessionHostConfigurations_ListByHostPool"
 }
