--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/AppAttachPackageInfo_Import_Post.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/AppAttachPackageInfo_Import_Post.json
@@ -122,5 +122,7 @@
         ]
       }
     }
-  }
+  },
+  "operationId": "AppAttachPackageInfo_Import_Post",
+  "title": "AppAttachPackageInfo_Import_Post"
 }
