Added more to examples

--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/Applications_Delete.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/Applications_Delete.json
@@ -39,5 +39,5 @@
     "204": {}
   },
   "operationId": "Applications_Delete",
-  "title": "Application_Delete"
+  "title": "Applications_Delete"
 }
