--- a/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/SessionHostConfigurations_Get.json
+++ b/specification/desktopvirtualization/DesktopVirtualization.Management/examples/2024-08-08-preview/SessionHostConfigurations_Get.json
@@ -72,7 +72,7 @@
           "securityInfo": {
             "type": "TrustedLaunch",
             "secureBootEnabled": true,
-            "vTPMEnabled": true
+            "vTpmEnabled": true
           },
           "vmAdminCredentials": {
             "usernameKeyVaultSecretUri": "https://myvault.vault.azure.net/secrets/myusername",
