--- a/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/preview/2024-08-08-preview/examples/SessionHostConfigurations_ListByHostPool.json
+++ b/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/preview/2024-08-08-preview/examples/SessionHostConfigurations_ListByHostPool.json
@@ -74,7 +74,7 @@
               "securityInfo": {
                 "type": "TrustedLaunch",
                 "secureBootEnabled": true,
-                "vTPMEnabled": true
+                "vTpmEnabled": true
               },
               "vmAdminCredentials": {
                 "usernameKeyVaultSecretUri": "https://myvault.vault.azure.net/secrets/myusername",
