--- a/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/preview/2024-08-08-preview/examples/SessionHostConfigurations_Update.json
+++ b/specification/desktopvirtualization/resource-manager/Microsoft.DesktopVirtualization/preview/2024-08-08-preview/examples/SessionHostConfigurations_Update.json
@@ -50,7 +50,7 @@
         "securityInfo": {
           "type": "TrustedLaunch",
           "secureBootEnabled": true,
-          "vTPMEnabled": true
+          "vTpmEnabled": true
         },
         "vmAdminCredentials": {
           "usernameKeyVaultSecretUri": "https://myvault.vault.azure.net/secrets/myusername",
@@ -133,7 +133,7 @@
           "securityInfo": {
             "type": "TrustedLaunch",
             "secureBootEnabled": true,
-            "vTPMEnabled": true
+            "vTpmEnabled": true
           },
           "vmAdminCredentials": {
             "usernameKeyVaultSecretUri": "https://myvault.vault.azure.net/secrets/myusername",
