--- a/specification/deviceregistry/DeviceRegistry.Management/tspconfig.yaml
+++ b/specification/deviceregistry/DeviceRegistry.Management/tspconfig.yaml
@@ -35,6 +35,17 @@ options:
     flavor: "azure"
     generate-test: true
     generate-sample: true
+    api-version: "2024-09-01-preview"
+  "@azure-tools/typespec-go":
+    service-dir: "sdk/resourcemanager/deviceregistry"
+    package-dir: "armdeviceregistry"
+    module: "github.com/Azure/azure-sdk-for-go/{service-dir}/{package-dir}"
+    fix-const-stuttering: true
+    flavor: "azure"
+    generate-examples: true
+    generate-fakes: true
+    head-as-boolean: true
+    inject-spans: true
 linter:
   extends:
     - "@azure-tools/typespec-azure-rulesets/resource-manager"
