--- a/eng/tools/tsconfig.json
+++ b/eng/tools/tsconfig.json
@@ -17,6 +17,6 @@
     { "path": "./typespec-requirement" },
     { "path": "./typespec-validation" },
     { "path": "./sdk-suppressions" },
-    { "path": "./gen-sdk"}
+    { "path": "./spec-gen-sdk-runner"}
   ]
 }
