--- a/specification/sovereign/resource-manager/Microsoft.Sovereign/preview/2025-02-27-preview/examples/LandingZoneConfigurationOperations_ListBySubscription.json
+++ b/specification/sovereign/resource-manager/Microsoft.Sovereign/preview/2025-02-27-preview/examples/LandingZoneConfigurationOperations_ListBySubscription.json
@@ -38,8 +38,7 @@
               "azureBastionSubnetCidrBlock": "10.20.255.0/24",
               "landingZonesMgChildren": [
                 {
-                  "policyInitiativesAssignmentProperties": [
-                  ],
+                  "policyInitiativesAssignmentProperties": [],
                   "name": "Corp"
                 }
               ],
