--- a/specification/sovereign/resource-manager/Microsoft.Sovereign/preview/2025-02-27-preview/examples/LandingZoneConfigurationOperations_Update.json
+++ b/specification/sovereign/resource-manager/Microsoft.Sovereign/preview/2025-02-27-preview/examples/LandingZoneConfigurationOperations_Update.json
@@ -33,8 +33,7 @@
         "azureBastionSubnetCidrBlock": "10.20.255.0/24",
         "landingZonesMgChildren": [
           {
-            "policyInitiativesAssignmentProperties": [
-            ],
+            "policyInitiativesAssignmentProperties": [],
             "name": "Corp"
           }
         ],
@@ -124,8 +123,7 @@
           "azureBastionSubnetCidrBlock": "10.20.255.0/24",
           "landingZonesMgChildren": [
             {
-              "policyInitiativesAssignmentProperties": [
-              ],
+              "policyInitiativesAssignmentProperties": [],
               "name": "Corp"
             }
           ],
